<resources>
    <string name="app_name">Quiz App</string>
    <string name="headline_text_view">How well do you know the World?</string>
    <string name="question_one">1) How many countries are there to form Europe?</string>
    <string name="q1_answer_36">36</string>
    <string name="q1_answer_27">27</string>
    <string name="q1_answer_44">44</string>
    <string name="question_two">2) What is the capital city of Australia?</string>
    <string name="hint_edit_text">Write it here</string>
    <string name="question_three">3) How many countries does Spain share a land border with?</string>
    <string name="q3_answer_2">2</string>
    <string name="q3_answer_3">3</string>
    <string name="q3_answer_4">4</string>
    <string name="q3_answer_5">5</string>
    <string name="question_four">4) Which of these countries are not part of the EU?</string>
    <string name="q4_answer_poland">Poland</string>
    <string name="q4_answer_albania">Albania</string>
    <string name="q4_answer_russia">Russia</string>
    <string name="question_five">5) How many countries border Russia?</string>
    <string name="q5_answer_10">10</string>
    <string name="q5_answer_12">12</string>
    <string name="q5_answer_11">11</string>
    <string name="q5_answer_14">14</string>
    <string name="question_six">6) Which is the world\'s youngest country?</string>
    <string name="q6_answer_montenegro">Montenegro</string>
    <string name="q6_answer_south_sudan">South Sudan</string>
    <string name="q6_answer_palau">Palau</string>
    <string name="question_seven">7) Which of these countries have a red, white and blue flag?</string>
    <string name="q7_answer_canada">Canada</string>
    <string name="q7_answer_uk">UK</string>
    <string name="q7_answer_italy">Italy</string>
    <string name="q7_answer_norway">Norway</string>
    <string name="question_eight">8) How many countries make up Africa?</string>
    <string name="q8_answer_54">54</string>
    <string name="q8_answer_28">28</string>
    <string name="q8_answer_69">69</string>
    <string name="question_nine">9) Which is the second most populated country in the world?</string>
    <string name="question_ten">10) How many countries in the world begin with the word United?</string>
    <string name="q10_answer_2">2</string>
    <string name="q10_answer_3">3</string>
    <string name="q10_answer_4">4</string>
    <string name="total_score_text_view">Your score is: 0/10</string>
    <string name="reset_button">reset</string>
    <string name="submit_button">submit</string>
    <string name="score_string">Your score is: %1$d/10</string>
    <string name="canberra">canberra</string>
    <string name="india">india</string>
    <string name="toast1">Your score is: %1$d/10\nExcellent result!</string>
    <string name="toast2">Your score is: %1$d/10\nGood result</string>
    <string name="toast3">Your score is: %1$d/10\nYou can improve</string>
    <string name="toast4">Your score is: %1$d/10\nYou will do better next time</string>
    <string name="play_again">Play again!</string>
</resources>
