<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:gravity="center_horizontal"
            android:text="@string/headline_text_view"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_one"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/q1_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_36" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_27" />

            <RadioButton
                android:id="@+id/q1_answer_44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_44" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_two"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/q2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/hint_edit_text"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_three"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/q3_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q3_answer_2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q3_answer_3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q3_answer_4" />

            <RadioButton
                android:id="@+id/q3_answer_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_answer_5" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_four"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/q4_answer_poland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_answer_poland" />

        <CheckBox
            android:id="@+id/q4_answer_albania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_answer_albania" />

        <CheckBox
            android:id="@+id/q4_answer_russia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/q4_answer_russia" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_five"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/q5_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q5_answer_10" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q5_answer_12" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q5_answer_11" />

            <RadioButton
                android:id="@+id/q5_answer_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_answer_14" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_six"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/q6_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_answer_montenegro" />

            <RadioButton
                android:id="@+id/q6_answer_south_sudan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_answer_south_sudan" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_answer_palau" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_seven"
            android:textColor="@color/black" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:columnCount="2">

            <CheckBox
                android:id="@+id/q7_answer_canada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7_answer_canada" />

            <CheckBox
                android:id="@+id/q7_answer_uk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7_answer_uk" />

            <CheckBox
                android:id="@+id/q7_answer_italy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7_answer_italy" />

            <CheckBox
                android:id="@+id/q7_answer_norway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7_answer_norway" />

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_eight"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/q8_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q8_answer_54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8_answer_54" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8_answer_28" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8_answer_69" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_nine"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/q9_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/hint_edit_text"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_ten"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/q10_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q10_answer_2" />

            <RadioButton
                android:id="@+id/q10_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/q10_answer_3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q10_answer_4" />

        </RadioGroup>

        <TextView
            android:id="@+id/total_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/total_score_text_view"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/reset_button" />

            <Button
                android:id="@+id/submit_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>